fix: text editor stuck in 6 lines size (#1042)

--- a/frontend/src/components/evidence_preview/stylesheet.styl
+++ b/frontend/src/components/evidence_preview/stylesheet.styl
@@ -1,5 +1,9 @@
 @import '~src/vars'
 
+
+.root.codeblock > div
+  height: 100%
+
 .root.image
   &.fit
     display: inline
